--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,14 @@ jobs:
       - name: 🐳 Build Docker Image
         run: docker build -t r_project .
 
-      - name: 📤 Push Docker Image to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker tag r_project ${{ secrets.DOCKER_USERNAME }}/r_project:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/r_project:latest
+      - name: 📤 Transfer Docker Image to Server (via SCP)
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "r_project.tar"
+          target: "/home/${{ secrets.SERVER_USER }}/"
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,7 +50,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/r_project:latest
+            docker load -i /home/${{ secrets.SERVER_USER }}/r_project.tar
             docker stop r_project || true
             docker rm r_project || true
-            docker run -d --name r_project --restart=always ${{ secrets.DOCKER_USERNAME }}/r_project:latest
+            docker run -d --name r_project --restart=always -p 8000:8000 r_project
