--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,12 @@
+# Fichiers et dossiers inutiles
 .Rproj.user
 .Rhistory
 .RData
-
-# Ignore les fichiers temporaires
-*.log
-*.tar
-*.tar.gz
-*.zip
-
-# Ignore les fichiers systèmes potentiels
 .DS_Store
 Thumbs.db
+logs/
+*.log
 
+# Empêcher Docker de copier `renv/`
+renv/
+!renv.lock
